add system.file() into knit_expand() as this could be the reason R CMD check is failing as knit_expand uses a different working directory than knit_child() to find the rmd files

--- a/inst/report/html_report/SignalDetectionReport.Rmd
+++ b/inst/report/html_report/SignalDetectionReport.Rmd
@@ -240,8 +240,9 @@ split(tmp_df, tmp_df$pathogen) %>%
 <!-- Pathogen pages -->
 
 ```{r, results='asis'}
+path_sdt_report_body <- system.file("report","html_report", "SignalDetectionReport_body.rmd", package = "SignalDetectionTool")
 src <- lapply(params$disease, function(i) {
-  knitr::knit_expand('SignalDetectionReport_body.rmd', 
+  knitr::knit_expand(path_sdt_report_body, 
                      pathogen = i)
 })
 
