--- a/inst/report/html_report/SignalDetectionReport_body.Rmd
+++ b/inst/report/html_report/SignalDetectionReport_body.Rmd
@@ -48,24 +48,24 @@ valueBox(value = n_signals_week,
          )
 ```
 
-Row
+Row  {data-height=200}
 -------------------------------------------------------------------------------
-
-<!-- Gauges for showing signals in strata. I didn't find a way to make it work with a normal loop -->
 
 ```{r, results='asis'}
 if(!is.null(params$strata)){
-  src <- lapply(params$strata, function(i) {
-    path_sdt_report_gauges <- system.file(
-      "report", "html_report", "SignalDetectionReport_gauges.rmd",
-      package = "SignalDetectionTool")
+  for(st in params$strata){
     
-    knitr::knit_expand(path_sdt_report_gauges, 
-                       category = i, pathogen = "{{pathogen}}")
-  })
+    cat(paste0(
+      "### Signals in [", st, "](#", tolower("{{pathogen}}"),"-",st,")\n"))
+    
+    p <- signals_padded %>% 
+      dplyr::filter(category == st) %>% 
+      plot_signals_per_week(interactive = TRUE, branding = brand_colors)
+    
+    print(htmltools::tagList(p))
   
-  res <- knitr::knit_child(text = unlist(src), quiet = TRUE)
-  cat(res, sep = "\n")
+    cat("\n\n")
+  }
 }
 ```
 
