--- a/inst/report/html_report/SignalDetectionReport_strata.Rmd
+++ b/inst/report/html_report/SignalDetectionReport_strata.Rmd
@@ -73,5 +73,5 @@ for(st in unique(df$stratum)){
 
 Row
 -------------------------------------------------------------------------------
-[Go back](`r paste0("SignalDetectionReport.html#", patho_f)`)
+[Go back](`r paste0(patho_f, ".html")`)
 
